--- a/login.html
+++ b/login.html
@@ -12,42 +12,41 @@
 </head>
 <body class="max-w-7xl mx-auto bg-primary text-white">
 
-    <section class="px-[150px] py-[130px] flex justify-center items-center w-full h-[100vh] gap-x-[100px]">
-        <div class="w-[484px] h-[571px] py-[48px]">
+    <section class="px-[150px] w-full items-center flex justify-center items-center gap-x-[100px] h-screen">
+        <div class="w-full h-fit">
             <div class="pb-[50px] flex flex-col gap-y-1">
                 <h2 class="font-bold text-[38px]">Happening Today</h2>
                 <p class="">What’s trend, what’s good for you.</p>
             </div>
             
             <div class="flex flex-col gap-4">
-
                 <div class="flex flex-col gap-2">
                     <label for="username" class="block text-base font-medium">Username</label>
-                    <div class="flex items-center justify-start rounded-full bg-secondary w-[484px]">
+                    <div class="flex items-center justify-start rounded-full bg-secondary">
                         <img src="./assets/crown.svg" alt="crown" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="text" placeholder="Username" id="username" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <input type="text" placeholder="Username" id="username" class=" h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="password" class="block text-base font-medium">Password</label>
-                    <div class="flex items-center justify-start rounded-full bg-secondary w-[484px]">
+                    <div class="flex items-center justify-start rounded-full bg-secondary">
                         <img src="./assets/lock.svg" alt="lock" srcset="" class="w-26 h-26 pl-4 mr-3">
                         <input type="password" placeholder="Password" id="password" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
             </div>
-            <div class="flex flex-col gap-3.5 my-[50px]">
-                <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></button>
-                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></button>
-            </div>
 
-        </div class="border-2 w-full h-full">
+            <div class="flex flex-col gap-3.5 mt-[50px]">
+                <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></button>
+                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></a>
+            </div>
+        </div>
+
+        <div class=" w-fit h-fit border-2 border-line">
             <h1 class="font-extrabold text-[120px]">
                 twittr.
             </h1>
-        <div>
-
         </div>
     </section>
 
