--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,7 @@
                     <div class="flex flex-col justify-start gap-3.5 px-[5] pt-[70px]">
                         <div class="flex justify-between items-center">
                             <div class="">
-                                <h3 class="text-[22px] font-bold">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"></h3>
+                                <h3 class="text-[22px] font-bold">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-6 h-6 rounded-full"></h3>
                                 <p class="text-username text-sm">@buildwithangga</p>
                             </div>
 
