--- a/register.html
+++ b/register.html
@@ -12,8 +12,8 @@
 </head>
 <body class="max-w-7xl mx-auto bg-primary text-white">
 
-    <section class="px-[150px] w-full items-center flex justify-center items-center gap-x-[100px] h-screen">
-        <div class="w-full h-fit">
+    <section class="px-[150px] w-full items-center flex justify-center items-center gap-[100px] h-screen">
+        <div class="h-fit">
             <div class="pb-[50px] flex flex-col gap-y-1">
                 <h2 class="font-bold text-[38px]">Sign Up</h2>
                 <p class="">What’s trend, what’s good for you.</p>
@@ -21,37 +21,37 @@
             
             <div class="flex flex-col gap-4">
                 <div class="flex flex-col gap-2">
-                    <label for="fullname" class="block text-base font-medium">Full Name</label>
+                    <label for="fullname" class="block text-base font-medium">Full name</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary">
-                        <img src="./assets/user.svg" alt="crown" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="text" placeholder="Full Name" id="fullname" class=" h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <img src="./assets/user.svg" alt="lock" srcset="" class="w-6 h-6 ml-4 mr-3">
+                        <input type="text" placeholder="Full name" id="fullname" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="username" class="block text-base font-medium">Username</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary">
-                        <img src="./assets/crown.svg" alt="crown" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="text" placeholder="Username" id="username" class=" h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <img src="./assets/crown-blur.svg" alt="lock" srcset="" class="w-6 h-6 ml-4 mr-3">
+                        <input type="text" placeholder="Username" id="username" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="password" class="block text-base font-medium">Password</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary">
-                        <img src="./assets/lock.svg" alt="lock" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="password" placeholder="Password" id="password" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <img src="./assets/lock.svg" alt="lock" srcset="" class="w-6 h-6 ml-4 mr-3">
+                        <input type="password" placeholder="Password" id="password" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
             </div>
 
             <div class="flex flex-col gap-3.5 mt-[50px]">
-                <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></button>
-                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></a>
+                <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Create Account</span></button>
+                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Sign In to My Account</span></a>
             </div>
         </div>
 
-        <div class=" w-fit h-fit border-2 border-line">
+        <div class="h-fit">
             <h1 class="font-extrabold text-[120px]">
                 twittr.
             </h1>
