--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <section class="px-[75px] min-w-fit flex justify-between">
         <!-- Sidebar -->
         <div class="min-w-[230px]">
-            <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
+            <a href="/">
+                <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
+            </a>
             <div class="flex flex-col gap-[30px]">
                 <a href="#" class="flex gap-4">
                     <img src="/assets/home-hashtag.svg" alt="" class="w-7 h7">
@@ -60,7 +62,7 @@
         </div>
 
         <!-- Feeds -->
-        <div class="h-fit border-2 border-line">
+        <div class="h-fit border-l-2 border-r-2 border-line">
             <div class="flex justify-center gap-[150px] pt-[20px] border-b-2 border-line">
                 <a href="#" class="px-2.5 pb-3.5 text-base font-bold border-b-4 border-link">For You</a>
                 <a href="#" class="px-2.5 pb-3.5 text-base font-bold text-username">Following</a>
@@ -71,17 +73,17 @@
                     <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full mr-3">
                     <textarea placeholder="What is happening ?!" id="search" class="w-full h-[100px] py-3 text-white bg-primary text-base placeholder:text-lg focus:outline-none focus:ring-0 focus:font-semibold resize-none focus:border-transparent overflow-hidden"></textarea>
                 </div>
-                <div class="w-[90%] flex justify-between items-center ml-[66px] pt-[17px] w-[484px]">
+                <div class="w-[90%] flex justify-between items-center ml-[54px] mr-4 pt-[17px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5">
-                        <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                        <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                             <p>🤩</p>
                             <p class="text-sm font-semibold">Happy</p>
                         </div>
-                        <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                        <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                             <p>😥</p>
                             <p class="text-sm font-semibold">Sad</p>
                         </div>
-                        <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                        <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                             <p>🤯</p>
                             <p class="text-sm font-semibold">Shock</p>
                         </div>
@@ -103,13 +105,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -136,13 +138,13 @@
                             <p class="text-username text-sm">@masayosh • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
-                        <p>🤩</p>
-                        <p class="text-sm font-semibold">Happy</p>
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
+                        <p>😥</p>
+                        <p class="text-sm font-semibold">Sad</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Javascript susah juga buat pemula</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Javascript susah juga buat pemula</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -151,8 +153,8 @@
                             <p class="text-sm font-normal text-username">394 Likes</p>
                         </a>
                         <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
-                            <img src="/assets/trash.svg" alt="heart">
-                            <p class="text-sm font-normal text-username">Delete</p>
+                            <img src="/assets/warning-2.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Report</p>
                         </a>
                     </div>
                 </div>
@@ -169,13 +171,46 @@
                             <p class="text-username text-sm">@Alqowy • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
+                        <p>🤯</p>
+                        <p class="text-sm font-semibold">Shock</p>
+                    </div>
+                </div>
+
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Besok libur, bisa upgrade skills engineering!!!</p>
+
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
+                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/heart.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">394 Likes</p>
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/warning-2.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Report</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bg-primary p-4 border-b-2 border-line">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
+                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Besok libur, bisa upgrade skills engineering!!!</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -202,46 +237,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
-
-                <div class="flex justify-between items-center pl-[55px] w-[484px]">
-                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
-                            <img src="/assets/heart.svg" alt="heart">
-                            <p class="text-sm font-normal text-username">394 Likes</p>
-                        </a>
-                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
-                            <img src="/assets/trash.svg" alt="heart">
-                            <p class="text-sm font-normal text-username">Delete</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
-                        <div class="pl-2">
-                            <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
-                            </div>
-                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
-                        </div>
-                    </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
-                        <p>🤩</p>
-                        <p class="text-sm font-semibold">Happy</p>
-                    </div>
-                </div>
-
-                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -263,8 +265,8 @@
         <div class="w-[320px]">
             <div class="pl-[30px] flex flex-col gap-5 py-[30px]">
                 <div class="flex items-center justify-start rounded-full bg-secondary">
-                    <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 pl-4 mr-3">
-                    <input type="text" placeholder="Search" id="search" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                    <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 ml-4 mr-3">
+                    <input type="text" placeholder="Search" id="search" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                 </div>
 
                 <div class="flex flex-col p-3.5 rounded-[16px] bg-secondary">
