--- a/profile.html
+++ b/profile.html
@@ -16,11 +16,13 @@
 
         <!-- Sidebar -->
         <div class="min-w-[230px]">
-            <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
+            <a href="/">
+                <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
+            </a>
             <div class="flex flex-col gap-[30px]">
-                <a href="#" class="flex gap-4">
+                <a href="/index.html" class="flex gap-4">
                     <img src="/assets/home-hashtag.svg" alt="" class="w-7 h7">
-                    <p class="text-xl active-sidebar">Home</p>
+                    <p class="text-xl">Home</p>
                 </a>
 
                 <a href="#" class="flex gap-4">
@@ -48,9 +50,9 @@
                     <p class="text-xl">Communities</p>
                 </a>
 
-                <a href="#" class="flex gap-4">
+                <a href="/profile.html" class="flex gap-4">
                     <img src="/assets/profile-circle.svg" alt="" class="w-7 h7">
-                    <p class="text-xl">Profile</p>
+                    <p class="text-xl active-sidebar">Profile</p>
                 </a>
 
                 <a href="/login.html" class="flex gap-4">
@@ -88,7 +90,7 @@
                             </a>
                         </div>
 
-                        <p class="text-base">Tempat belajar skills Product Design & Software Development bersama mentor berpengalaman dengan komunitas yang supportive.</p>
+                        <p class="leading-[26px] text-sm">Tempat belajar skills Product Design & Software Development bersama mentor berpengalaman dengan komunitas yang supportive.</p>
 
                         <div class="flex gap-5">
                             <div class="flex gap-1.5">
@@ -138,13 +140,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -171,13 +173,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
-                        <p>🤩</p>
-                        <p class="text-sm font-semibold">Happy</p>
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
+                        <p>😥</p>
+                        <p class="text-sm font-semibold">Sad</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Javascript susah juga buat pemula</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Javascript susah juga buat pemula</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -204,13 +206,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
-                        <p>🤩</p>
-                        <p class="text-sm font-semibold">Happy</p>
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
+                        <p>🤯</p>
+                        <p class="text-sm font-semibold">Shock</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Besok libur, bisa upgrade skills engineering!!!</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Besok libur, bisa upgrade skills engineering!!!</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -237,13 +239,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -270,13 +272,13 @@
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                    <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 leading-7 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -299,7 +301,7 @@
             <div class="pl-[30px] flex flex-col gap-5 py-[30px]">
                 <div class="flex items-center justify-start rounded-full bg-secondary">
                     <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 pl-4 mr-3">
-                    <input type="text" placeholder="Search" id="search" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                    <input type="text" placeholder="Search" id="search" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                 </div>
 
                 <div class="flex flex-col p-3.5 rounded-[16px] bg-secondary">
